--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.hero-container{
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.left-hero{
+  background-color: black;
+  color: white;
+  height: 500px;
+  width: 120%;
+}
+.right-hero img{
+  height: 500px;
+  width: 100%;
+}
+.right-hero{
+
+width: 80%;
+}
